osd/PG: ignore RemoteReservationRejected if we are RepNotRecoverying

The primary may send us a REJECT (meaning cancel) if recovery/backfill is
preempted there.  That can happen even if the recovery isn't reserved or
requested here (e.g., because the primary is still waiting for the local
reservation).  Just ignore it and remain in RepNotRecovering.

Fixes: http://tracker.ceph.com/issues/21613
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 1ce235c5dd0b777223f6465e71fb7ee4befd13d8)